# GateKeeper

./: .eslintrc.js  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  config.py  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  run.py  setup.py  tsconfig.json  tsconfig.test.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  code-quality.yml  code_performance.yml  codeql.yml  debug-test.yml  dependabot-auto-merge.yml  release.yml
app/: __init__.py
app/v1/: routes.py
example/: .env.example  README.md  index.js  package-lock.json  package.json  reset-password.html  test-endpoints.js  test-forgot-password.js
scripts/: rename-cjs.sh
scripts/localstack/: 01-setup-cognito.sh
src/: auth-manager.ts  config.ts  error-handler.ts  errors.ts  index.ts  jwks-cache.ts  jwt-verification.ts  middleware.ts  retry-handler.ts  types.ts  utils.ts  validation.ts
tests/: auth-manager-simple.test.ts  auth-manager.test.ts  config.test.ts  custom-claims.test.ts  env-config.test.ts  error-handler.test.ts  errors.test.ts  jwks-cache.test.ts  jwt-verification.test.ts  middleware.test.ts  package-compatibility.test.ts  retry-handler.test.ts  retry-integration.test.ts  setup.test.ts  setup.ts  test_app_creation.py  test_forgot_password_validation.py  test_signin_validation.py  test_signup_validation.py  test_url_protection_validation.py  test_util_functions.py  types.test.ts  utils.test.ts  validation.test.ts
tests/fixtures/: custom_fixture.py
